[package]
name = "ferric"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.1.0", features = ["derive"]}
clap-verbosity-flag = "2.2.0"
tokio = {version = "1", features = ["full"]}
futures = "0.3"
log = "0.4"
env_logger = "0.10"
termcolor = "1.2"
indoc = "1.0"
local-ip-address = "0.4"
dirs = "4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
quick-xml = {version = "0.25", features = ["serialize"]}
ctrlc = "3.2"
trust-dns-resolver = "0.20"
chrono = "0.4.38"
